src/components/Upload/style/Upload.scss
@use '@/styles/api' as theme;

$component: 'upload';

.#{theme.$prefix}-#{$component} {
  display: flex;
  flex-direction: column;
  gap: theme.spacing(scale, 200);
  align-items: flex-start;

  &-input {
    display: none;
  }

  &-label {
    color: theme.palette(text, 'default');
  }

  &-description {
    color: theme.palette(text, 'default-tertiary');
  }

  &-slot {
    display: flex;
    flex-direction: column;
    gap: 0;
    width: 100%;
  }

  &-error-msg {
    display: flex;
    gap: theme.spacing(scale, 100);
    align-items: flex-start;
    color: theme.palette(text, 'danger');

    &-text {
      color: inherit !important;
    }
  }

  &-disabled {
    cursor: not-allowed;
  }
}

